...
    @IBOutlet weak var welcomeMessage: UILabel!
    @IBOutlet weak var versionLabel: UILabel!
    
    //Constants
    private let NAVIGATION_DATA: [(title: String, image: UIImage)] = [
        (title: "Today", image: #imageLiteral(resourceName: "Meeting_000000_100")),
        (title: "Log out/change login", image: #imageLiteral(resourceName: "Meeting_000000_100")),
        (title: "About", image: #imageLiteral(resourceName: "Meeting_000000_100"))
    ]
    private let WELCOME_MESSAGES: [String] = [
        "Have a great day!",
        "Thanks for stopping by!",
        "Enjoy class today!"
...
